# parao

./: pyproject.toml
src/parao/: __init__.py  action.py  cast.py  cli.py  core.py  misc.py  output.py  print.py  run.py  shash.py  steno.py  task.py
tests/: test_action.py  test_cast.py  test_cli.py  test_core.py  test_misc.py  test_shash.py  test_steno.py  test_task.py
