[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.2"
name = "parao"
authors = [{ name = "B. Fischer", email = "b.fis@cern.ch" }]
description = "Coming soon"
requires-python = ">=3.12"

[tool.hatch.envs.hatch-test]
extra-dependencies = ["pytest-cov"]

[tool.coverage.run]
source_pkgs = ["parao", "tests"]
branch = true
parallel = true
omit = ["src/parao/__about__.py"]

[tool.coverage.paths]
parao = ["src/parao", "*/parao/src/parao"]
tests = ["tests", "*/parao/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
